# dzialkowizja

./: .env.example  .gitignore  INGEST.md  MONITORING.md  SERVER.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_plot_snapshots.py  003_roszczenia.py  004_roszczenia_rename_col.py  005_roszczenia_kw_entities.py  006_argumentacja.py  007_multi_tenant_roles.py  008_org_stats_enabled.py  009_org_access_policy.py  010_srednie_ceny.py  011_roszczenia_owner_flags.py  012_roszczenia_wartosc_old.py  013_wycena_supplemental.py  014_dual_user_role_per_role_restrictions.py  015_per_role_limits.py
backend/app/: cli.py  config.py  main.py
backend/app/admin/: router.py  schemas.py
backend/app/argumentacja/: router.py
backend/app/audit/: recorder.py
backend/app/auth/: dependencies.py  password.py  router.py  schemas.py  session.py
backend/app/db/: engine.py  geo.py  models.py
backend/app/gesut/: router.py  vectorize.py
backend/app/history/: router.py
backend/app/investments/: router.py
backend/app/middleware/: rate_limit.py  rate_limit_dep.py  (+2 more)
backend/scripts/: extract_osm_powerlines.py  gunb_investments_schema.sql  ingest_argumentacja_csv.py  ingest_bdot_power_devices.py  ingest_bdot_powerlines.py  ingest_gunb_fast.py  ingest_gunb_rwdz.py  ingest_roszczenia_csv.py  ingest_srednie_ceny_sqlite.py  ingest_transakcje_sqlite.py  ingest_wycena_supplemental_csv.py  powerlines_schema.sql  refresh_transakcje_centroids.py  setup_transakcje_fdw.py
(+69 files in other folders)
