[project]
name = "dzialkowizja"
version = "0.1.0"
description = "Land plot data search application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B"]
ignore = ["S104"]
